--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ initCanvas(); draw();
 // --- Páginas de la carta ---
 const paginas = [
 `<p>
-Montse,<br>
+Montse primero que nada ponele play y disfrutamos de este Temon,<br>
 ya llevamos más de dos años juntos y hay tanto por agradecer.<br>
 Hemos compartido momentos simples y otros más difíciles, risas,
 aprendizajes y silencios que también dicen mucho. Todo eso nos trajo hasta acá.
@@ -147,23 +147,23 @@ Este no es solo un recuerdo, es una promesa de seguir caminando juntos.
 </p>
 <p><strong>Te amo.</strong></p>`,
 
-`<div class="foto-texto"><img src="foto1.jpeg"><p>donde todo empezó esta locura ccp1912</p></div>`,
-`<div class="foto-texto"><img src="foto2.jpeg"><p>cada dia mas iba conociéndote y queriendo mas cosas contigo</p></div>`,
-`<div class="foto-texto"><img src="foto3.jpeg"><p>una de las tantas que tenemos en tu casa realmente la primera vez que pise tu casa estaba muy nervioso</p></div>`,
-`<div class="foto-texto"><img src="foto4.jpeg"><p>siempre me gustaba verte sonreir</p></div>`,
-`<div class="foto-texto"><img src="foto5.jpeg"><p>cuando contagiamos a todos la gripe</p></div>`,
-`<div class="foto-texto"><img src="foto6.jpeg"><p>ñamendama katu kañyhape</p></div>`,
-`<div class="foto-texto"><img src="foto7.jpeg"><p>presumiendo el anillo</p></div>`,
-`<div class="foto-texto"><img src="foto8.jpeg"><p>asi como me ves siempre me hiciste feliz</p></div>`,
-`<div class="foto-texto"><img src="foto9.jpeg"><p>no sabes lo que causa tus besos en mi vida</p></div>`,
-`<div class="foto-texto"><img src="foto10.jpeg"><p>sin vos que va a pasar de mi, mi compañera para todo</p></div>`,
-`<div class="foto-texto"><img src="foto11.jpeg"><p>mi compañera de viajes, sin vos a mi lado ya no me veo viajando</p></div>`,
-`<div class="foto-texto"><img src="foto12.jpeg"><p>me tenes loco che morenita juky</p></div>`,
-`<div class="foto-texto"><img src="foto13.jpeg"><p>mi novia del mundial</p></div>`,
-`<div class="foto-texto"><img src="foto14.jpeg"><p>amor todo llega a su tiempo y el nuestro esta llegando pronto ñamendata</p></div>`,
-`<div class="foto-texto"><img src="foto15.jpeg"><p>siempre espero tenerte conmigo</p></div>`,
-`<div class="foto-texto"><img src="foto16.jpeg"><p>y nunca me falte tu presencia</p></div>`,
-`<div class="foto-texto"><img src="foto17.jpeg"><p>un futuro sin vos ya no veo TE AMO</p></div>`
+`<div class="foto-texto"><img src="foto1.jpeg"><p>Donde todo empezó esta locura ccp1912</p></div>`,
+`<div class="foto-texto"><img src="foto2.jpeg"><p>Cada dia mas iba conociéndote y queriendo mas cosas contigo</p></div>`,
+`<div class="foto-texto"><img src="foto3.jpeg"><p>Llegaste en el momento justo cuando todo iba perdiendo un sentido</p></div>`,
+`<div class="foto-texto"><img src="foto4.jpeg"><p>Tu sonrisa me hizo ver el mundo distinto</p></div>`,
+`<div class="foto-texto"><img src="foto5.jpeg"><p>Y aprendi que no importando que este enfermo me cuidas</p></div>`,
+`<div class="foto-texto"><img src="foto6.jpeg"><p>Ese dia para mi si es legal (nosotros estamos casados)</p></div>`,
+`<div class="foto-texto"><img src="foto7.jpeg"><p>Hasta que se dio el casamiento koygua</p></div>`,
+`<div class="foto-texto"><img src="foto8.jpeg"><p>Llegaste a mi vida para traer una felicidad que no puedo explicar</p></div>`,
+`<div class="foto-texto"><img src="foto9.jpeg"><p>No sabes lo que causa tus besos en mi vida son como cuando llega una luz en un lugar oscuro</p></div>`,
+`<div class="foto-texto"><img src="foto10.jpeg"><p>Y siempre quiero verte feliz asi</p></div>`,
+`<div class="foto-texto"><img src="foto11.jpeg"><p>Mi compañera de viajes, sin vos a mi lado los viajes son aburridos</p></div>`,
+`<div class="foto-texto"><img src="foto12.jpeg"><p>Mira namas esta hermosura (que suerte que me hizo caso)</p></div>`,
+`<div class="foto-texto"><img src="foto13.jpeg"><p>Mi novia del mundial</p></div>`,
+`<div class="foto-texto"><img src="foto14.jpeg"><p>Amor todo llega a su tiempo y el nuestro esta llegando pronto ñamendata aguantame un fla ya termino</p></div>`,
+`<div class="foto-texto"><img src="foto15.jpeg"><p>Siempre espero tenerte conmigo</p></div>`,
+`<div class="foto-texto"><img src="foto16.jpeg"><p>Y nunca me falte tu presencia</p></div>`,
+`<div class="foto-texto"><img src="foto17.jpeg"><p>Un futuro sin vos ya no veo TE AMO</p></div>`
 ];
 
 let paginaActual=0;
@@ -196,3 +196,4 @@ mostrarPagina();
 </script>
 </body>
 </html>
+
